--- a/charts/busypod/values.yaml
+++ b/charts/busypod/values.yaml
@@ -5,10 +5,10 @@
 replicaCount: 1
 
 image:
-  repository: nginx
+  repository: busybox
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: ""
+  tag: "latest"
 
 imagePullSecrets: []
 nameOverride: ""
@@ -80,3 +80,12 @@ nodeSelector: {}
 tolerations: []
 
 affinity: {}
+
+persistence:
+  accessModes:
+    - ReadWriteOnce
+  size: 1Gi
+  # storageClass: manual
+  # existingClaim: mypv
+
+fileCount: 10
